--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
-}
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  
+    font-family:  cursive;
+  
+ 
+} 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  display: block;
+  width:60%;
+  font-size: medium;
+  margin-bottom: 40px;
+  margin-left: 200px;
+  border:none;
+  border-bottom: 2px solid rgb(200, 196, 196);;
+  outline: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input::placeholder{
+ color: rgb(200, 196, 196);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputform h1{
+  margin-bottom: 40px;
+}
+.FB-google{
+  margin-bottom: 40px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+   margin-left: 200px;
+   justify-content: space-between;
+   width: 600px;
+}
+.or{
+  margin-bottom: 40px;
+}
+form h4{
+  color:green;
+}form h5{
+  color:red
+}.App{
+  display: flex;
+  justify-content: space-between;
+  width:100%;
+  height:100vh;
+  background-color: #B1D9DB;
+  
+}
+.img{
+ 
+  position: absolute;
+
+  rotate: -7.15deg;
+  width:460px;
+  top:222px;
+  left:58.57px
+  
+}.inputform{
+  background-color: white;
+  border-radius: 25px;
+  padding-top: 40px ;
+  
+  width:70%;
+  text-align: center;
+  
+  
+}.App h3{
+  color:white;
+}.imagediv{
+  color:white;
+}
+span{
+  border:1px solid rgb(196, 193, 193);
+  width:200px;
+  align-content: center;
+  padding: 3px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-radius: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+  Padding:9px 126px;
+   background: #7CD2D7;
+   color: white;
+   font-size: medium;
+   
+   border: none;
+   border-radius: 9px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputform h2{
+  margin-top: 20px;
 }
